# qafiyah

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  .syncpackrc.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  biome.json  bunfig.toml  commitlint.config.js  commitlint.config.mjs  docker-compose.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  format-and-lint.yml  gitleaks.yml  post-poem.yml  reconcile.yml  scheduled-tweet.yml  tests.yml  x-bot.yml
.husky/: commit-msg  pre-commit
apps/api/: .dev.vars.example  .env.example  .gitignore  (+5 more)
apps/dataset-publisher/: .env.example  .gitignore  package.json  publish.py  pyproject.toml  requirements.txt
deploy/: docker-compose.yml
dev/: check-port.mjs  setup-database.sh
docs/: DEPLOYMENT.md  SEARCH_FEATURE_IMPLEMENTATION.md
dumps/: MAINTAINERS_GUIDE.md  README.md
scripts/: check-api-db-isolation.ts  check-constants-centralization.ts  check-cross-app-imports.ts  check-database.sh  check-db.ts  check-naming.ts  check-no-parent-imports.ts  check-port.mjs  check-port.ts  ci.ts  db-init.sh  deploy.sh  deps-doctor.ts  dev.sh  es-reindex.sh  extract-rhymes.test.ts  extract-rhymes.ts  optimize-images.ts  rollback-to-prod.sh  setup-database.sh  setup-local-db.sh  smoke-test.ts  tsconfig.json
(+443 files in other folders)
